--- a/package.json
+++ b/package.json
@@ -24,10 +24,17 @@
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
+    "angularfire2": "^5.0.0-rc.2",
+    "firebase": "^4.5.0",
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
+    "ng2-redux": "^5.1.2",
+    "promise-polyfill": "^6.0.2",
+    "redux": "^3.7.2",
+    "redux-observable": "^0.16.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
+    "tassign": "^1.0.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
